# UCVM

./: .gitattributes  LICENSE  README.md  setup.list  setup.py  ucvm.py  ucvm_setup
cca_verification_new_projection/: cca_verification_new_projection.py
cybershake_cca_1d/: README.md  cs_cca_1d_bbp.conf  gen_bbp_format_no_water.py  make_1d_profiles.py
cybershake_find_poisson_average/: README.md  cybershake_find_poisson_average.py
cybershake_find_vpvs_ratio_average/: README.md  cybershake_check_ratios_from_original_dataset.py  cybershake_find_vpvs_ratio_below.py  cybershake_find_vpvs_ratio_bounds.py
docs/: Makefile  api.rst  availablemodels.rst  capabilities.rst  commands.rst  conf.py  configurationfiles.rst  developers.rst  developers_api.rst  developers_api_data_structures.rst  developers_api_meshing.rst  developers_api_query.rst  developers_api_visualization.rst  features.rst  index.rst  installation.rst  installation_advanced.rst  installation_anaconda.rst  installation_hpc_bluewaters.rst  installation_hpc_mira.rst  installation_hpc_titan.rst  installation_hpc_usc.rst  installation_linux.rst  installation_mac.rst  introduction.rst  make.bat  newfeatures.rst  testing.rst  tests.rst  tests_release_verification.rst  tutorial.rst
examples/: compare_rwg_etree.xml  extract_large_etree_mpi_her.usc  extract_large_etree_mpi_her_example.bw  extract_large_etree_mpi_her_example.usc  extract_large_mesh_mpi_awp.usc  extract_large_mesh_mpi_awp_example.bw  extract_large_mesh_mpi_awp_example.usc  extract_large_mesh_mpi_rwg.usc  extract_large_mesh_mpi_rwg_example.bw  extract_large_mesh_mpi_rwg_example.usc  extract_test_mesh_mpi_awp.usc  extract_test_mesh_mpi_rwg.usc  high_f_etree_highres.xml  high_f_etree_lowres.xml  high_f_mesh_awp_highres.xml  high_f_mesh_awp_lowres.xml  high_f_mesh_rwg_highres.xml  high_f_mesh_rwg_lowres.xml  plot_extraction_awp.xml  plot_extraction_etree.xml  plot_extraction_rwg.xml
find_cybershake_vs30_z_data/: find_cybershake_vs30_z_data.py
find_minimum_text_model/: README.md  find_minimum_text_model.py
model/ucvm/: ucvm.e  (+1 more)
pycvm_examples/: README.md  depth_profile_ucvm15100.py  (+2 more)
ucvm/models/velocity/cvms426m01/src/: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  compile  configure  configure.ac  depcomp  install-sh  missing
ucvm/models/velocity/cvms426m01/src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
ucvm/models/velocity/cvms426m01/src/model/cvms/: Makefile.am  Makefile.in  b1___edge  b4___sur2  cvms_sub.f  ku1__edge  ku8__edge  lab_geo2_geology  laba_edge  pu2B_edge  q12b_sur2  q12x_sur2  q12y_edge  q12z_sur2  qps2_sur2  salton_base.sur  sgba_sur2  smb1_edge  smm1_edge  smr1_sur2  te6A_edge  te6B_edge  te6B_sur2  te7__edge  tj2__sur2  tsq2_edge  tsq2_sur2  tv1__sur2  tv2__edge  tv2__sur2  tv3__sur2  tv9__sur2  version.h
ucvm/models/velocity/cvms426m01/src/model/i26/: XYZGRD  cvmsi.ver  region_spec.in
ucvm/models/velocity/cvms426m01/src/scripts/: Text2Grid.py  text2grid.pbs  text2grid_i0.pbs
ucvm/models/velocity/cvms426m01/src/src/: FD_GRID_XYZ_rect.f90  Makefile.am  Makefile.in  XYZGRD  cvmsi.c  cvmsi.h  cvmsi_geo2xy.f90  cvmsi_geo2xy.h  cvmsi_query.c  cvmsi_utils.c  cvmsi_utils.h  findnode.f90  grd2utm.f90  lonlat2grd.f90  rect.inp  utm2grd.f90  utm2lonlat.f90  utm_geo.f90  vs30_gtl.c  vs30_gtl.h  xyz_rect
ucvm/models/velocity/cvms426m01/src/test/: Makefile.am  Makefile.in  accepttest.c  unittest.c
ucvm/models/velocity/cvms426m01/src/test/data/: atest1.out  atest2.out  atest3.out
(+605 files in other folders)
